remove css related to dots for carousel as no longer used, simplify and make spacing css more consistent for each section, adjust parents will love activities styling to accomodate new square images

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -48,11 +48,16 @@ h1,h2,h3 {
     flex-flow: column nowrap;
     align-items: center;
 
+    padding-bottom: $space-section-padding-mobile;
+
     @include desktop-query {
+
         flex-flow: row nowrap;
         align-items:flex-start;
         justify-content: center;
         gap: 40px;
+
+        padding-bottom: $space-section-padding-tablet;
     }
 
     &__info {
@@ -238,7 +243,7 @@ h1,h2,h3 {
 }
 .activities {
     padding: $space-section-padding-mobile 0;
-    margin:  $space-section-padding-mobile 0;
+    // margin:  $space-section-padding-mobile 0;
     background-color: $col-activities-background;
     // display: flex;
     // flex-direction: column;
@@ -249,7 +254,7 @@ h1,h2,h3 {
 
     @include tablet-query {
         padding: $space-section-padding-tablet 0;
-        margin:  $space-section-padding-tablet 0;
+        //margin:  $space-section-padding-tablet 0;
     }
 
     &__title {
@@ -311,51 +316,19 @@ h1,h2,h3 {
     }
 }
 
-// Dots navigation on the Activities carousel
-.slick-dots {
-    display: flex !important; // override app's built-in inline styling
-    justify-content: center;
-    gap: 1.5rem;
-    
-    list-style: none;
-    margin-top: $space-mobile-between*1.5;
-    
-    @include tablet-query {
-        margin-top: $space-mobile-between*2;
-    }
-
-    & li button {
-        font-size: 0;
-        line-height: 0;
-        color: $col-grey-mid;
-
-        border-radius: 100%;
-        height: 0.7rem;
-        width: 0.7rem;
-
-        border: none;
-        background-color: $col-grey-mid;
-
-        @include tablet-query {
-            height: 1rem;
-            width: 1rem;
-        }
-    }
-    & li.slick-active button {
-        background-color:  $col-brand-primary;
-        color: $col-brand-primary;
-    }
-}
-
 .features {
-    // padding: $space-section-padding-mobile 0;
-    margin:  $space-section-padding-mobile 0;
+    padding: $space-section-padding-mobile 0;
+    //margin:  $space-section-padding-mobile 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: $space-section-padding-mobile;
 
     overflow: hidden;
+
+    @include tablet-query {
+        padding: $space-section-padding-tablet 0;
+    }
 
     &__title {
         width: 20rem;
@@ -380,7 +353,7 @@ h1,h2,h3 {
             max-width: 450px;
 
             @include tablet-query {
-                gap: $space-mobile-between*2.5 0;
+                gap: $space-mobile-between*4.5 $space-mobile-between*2; // $space-mobile-between*2.5 0;
                 max-width: 1000px;
             }
         }
@@ -392,11 +365,11 @@ h1,h2,h3 {
         gap: $space-mobile-between;
 
         @include tablet-query {
-            width: 23rem;
+            width: 22rem; //23rem;
         }
 
         &-image {
-            width: 100%;
+            width: 85%; // 100%;
             object-fit: contain;
 
             @include tablet-query {
